# shade

./: .gitmodules  CMakeLists.txt  README.md
examples/: default.glsl  mouse.glsl  sine.glsl
include/: app.h  builtins.h  cli.h  file_watching.h  shader.h
src/: app.cpp  file_watching.cpp  main.cpp  shader.cpp  ui.cpp
